# telegram_bot_example

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
migrations/: env.py
migrations/versions/: ad4b12d9a53b_feat_create_user_model.py  ba66d1482d57_feat_add_telegram_id_to_user_model.py
src/: bot.py  config.py  database.py  models.py
src/handlers/: routers.py  start.py
src/repositories/: user.py
src/schemas/: user.py
src/services/: user.py
src/utils/: repository.py
